data/derived/comb/progs/unify/prog7168.ml.out
Characters 74-87:
  | h :: t -> h @ listReverse t;;
                  ^^^^^^^^^^^^^
Error: This expression has type 'a list list
       but an expression was expected of type 'a list
       The type variable 'a occurs inside 'a list
